@@ -7821,9 +7821,9 @@ typedef struct {
   uintB bits;
 } key_event_t;
 
-/* Initializers for the two most common kinds of keyboard events. */
-#define key_ascii(asc)     (key_event_t){ NULL, ascii(asc), 0 }
-#define key_special(name)  (key_event_t){ name, ascii(0), char_hyper_c }
+# Initializers for the two most common kinds of keyboard events.
+  #define key_ascii(asc)  { NULL, ascii(asc), 0 }
+  #define key_special(name)  { name, ascii(0), char_hyper_c }
 
 # Creates a keyboard event.
 local object make_key_event (const key_event_t* event) {
@@ -8318,7 +8318,7 @@ local object rd_ch_keyboard (const gcv_object_t* stream_) {
 
 # UP: extends the List STACK_0 by one key-assignment.
 # can trigger GC
-local void keybinding (const char* cap, const key_event_t event) {
+local void add_keybinding (const char* cap, const key_event_t* event) {
   var const uintB* ptr = (const uintB*)cap;
   if (*ptr=='\0') # avoid empty key-sequence
     return;
@@ -8330,7 +8330,7 @@ local void keybinding (const char* cap, const key_event_t event) {
     do {
       pushSTACK(code_char(as_chart(*ptr))); ptr++; count++;
     } until (*ptr=='\0');
-    pushSTACK(make_key_event(&event)); count++;
+    pushSTACK(make_key_event(event)); count++;
     funcall(L(liststern),count);
   }
   # and push on STACK_0:
@@ -8339,6 +8339,8 @@ local void keybinding (const char* cap, const key_event_t event) {
     Car(l) = value1; Cdr(l) = STACK_0; STACK_0 = l;
   }
 }
+#define keybinding(cap,initializer)  \
+  do { key_event_t event = initializer; add_keybinding(cap,&event); } while(0)
 #endif
 
 #ifdef NEXTAPP
@@ -8367,62 +8369,103 @@ local object make_keyboard_stream (void) {
         var char* tp = &tentry[0];
         var const char* cap;
         end_system_call();
-#define BIND_KEY(key,binding) do {                                \
-  begin_system_call(); cap = tgetstr(key,&tp); end_system_call(); \
-  if (cap) keybinding(cap,binding); } while(0)
-        BIND_KEY("kb",key_ascii(BS)); /* #\Backspace */
-        BIND_KEY("kI",key_special("INSERT")); /* #\Insert */
-        BIND_KEY("kD",key_special("DELETE")); /* #\Delete */
-        /* arrow keys: */
-#define CHECK_CAP(a,b,c)                                                \
-  (cap && (cap[0] == ESC) && (cap[1] == a) && (cap[2] == b) && (cap[3] == c))
-        BIND_KEY("ku",key_special("UP")); /* #\Up */
-        if (CHECK_CAP('O','A','\0'))
-          keybinding(ESCstring"[A", key_special("UP")); /* #\Up */
-        BIND_KEY("kd",key_special("DOWN")); /* #\Down */
-        if (CHECK_CAP('O','B','\0'))
-          keybinding(ESCstring"[B", key_special("DOWN")); /* #\Down */
-        BIND_KEY("kr",key_special("RIGHT")); /* #\Right */
-        if (CHECK_CAP('O','C','\0'))
-          keybinding(ESCstring"[C", key_special("RIGHT")); /* #\Right */
-        BIND_KEY("kl",key_special("LEFT")); /* #\Left */
-        if (CHECK_CAP('O','D','\0'))
-          keybinding(ESCstring"[D", key_special("LEFT")); /* #\Left */
-        /* other cursorblock-keys: */
-        BIND_KEY("kh",key_special("HOME")); /* #\Home */
-        BIND_KEY("K1",key_special("HOME")); /* #\Home */
-        BIND_KEY("KH",key_special("END")); /* #\End */
-        BIND_KEY("K4",key_special("END")); /* #\End */
-        BIND_KEY("kP",key_special("PGUP")); /* #\PgUp */
-        BIND_KEY("K3",key_special("PGUP")); /* #\PgUp */
-        BIND_KEY("kN",key_special("PGDN")); /* #\PgDn */
-        BIND_KEY("K5",key_special("PGDN")); /* #\PgDn */
-        BIND_KEY("K2",key_special("CENTER")); /* #\Center */
-        /* Function Keys: */
-        BIND_KEY("k1",key_special("F1")); /* #\F1 */
-        BIND_KEY("k2",key_special("F2")); /* #\F2 */
-        BIND_KEY("k3",key_special("F3")); /* #\F3 */
-        BIND_KEY("k4",key_special("F4")); /* #\F4 */
-        BIND_KEY("k5",key_special("F5")); /* #\F5 */
-        BIND_KEY("k6",key_special("F6")); /* #\F6 */
-        BIND_KEY("k7",key_special("F7")); /* #\F7 */
-        BIND_KEY("k8",key_special("F8")); /* #\F8 */
-        BIND_KEY("k9",key_special("F9")); /* #\F9 */
-        BIND_KEY("k0",key_special("F10")); /* #\F10 */
-        BIND_KEY("k;",key_special("F10")); /* #\F10 */
-        BIND_KEY("F1",key_special("F11")); /* #\F11 */
-        BIND_KEY("F2",key_special("F12")); /* #\F12 */
-#undef BIND_KEY
+        # Backspace:
+        begin_system_call(); cap = tgetstr("kb",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_ascii(BS)); # #\Backspace
+        # Insert, Delete:
+        begin_system_call(); cap = tgetstr("kI",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("INSERT")); # #\Insert
+        begin_system_call(); cap = tgetstr("kD",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("DELETE")); # #\Delete
+        # arrow keys:
+        begin_system_call(); cap = tgetstr("ku",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("UP")); # #\Up
+        if (cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'A') && (cap[3] == '\0'))
+          keybinding(ESCstring"[A", key_special("UP")); # #\Up
+        begin_system_call(); cap = tgetstr("kd",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("DOWN")); # #\Down
+        if (cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'B') && (cap[3] == '\0'))
+          keybinding(ESCstring"[B", key_special("DOWN")); # #\Down
+        begin_system_call(); cap = tgetstr("kr",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("RIGHT")); # #\Right
+        if (cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'C') && (cap[3] == '\0'))
+          keybinding(ESCstring"[C", key_special("RIGHT")); # #\Right
+        begin_system_call(); cap = tgetstr("kl",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("LEFT")); # #\Left
+        if (cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'D') && (cap[3] == '\0'))
+          keybinding(ESCstring"[D", key_special("LEFT")); # #\Left
+        # other cursorblock-keys:
+        begin_system_call(); cap = tgetstr("kh",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("HOME")); # #\Home
+        begin_system_call(); cap = tgetstr("K1",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("HOME")); # #\Home
+        begin_system_call(); cap = tgetstr("KH",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("END")); # #\End
+        begin_system_call(); cap = tgetstr("K4",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("END")); # #\End
+        begin_system_call(); cap = tgetstr("kP",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("PGUP")); # #\PgUp
+        begin_system_call(); cap = tgetstr("K3",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("PGUP")); # #\PgUp
+        begin_system_call(); cap = tgetstr("kN",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("PGDN")); # #\PgDn
+        begin_system_call(); cap = tgetstr("K5",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("PGDN")); # #\PgDn
+        begin_system_call(); cap = tgetstr("K2",&tp); end_system_call();
+        if (cap)
+          keybinding(cap, key_special("CENTER")); # #\Center
+        # Function Keys:
+        {
+          typedef struct { const char* capname; key_event_t key; } funkey;
+          local var const funkey funkey_tab[] = {
+            { "k1", key_special("F1") }, # #\F1
+            { "k2", key_special("F2") }, # #\F2
+            { "k3", key_special("F3") }, # #\F3
+            { "k4", key_special("F4") }, # #\F4
+            { "k5", key_special("F5") }, # #\F5
+            { "k6", key_special("F6") }, # #\F6
+            { "k7", key_special("F7") }, # #\F7
+            { "k8", key_special("F8") }, # #\F8
+            { "k9", key_special("F9") }, # #\F9
+            { "k0", key_special("F10") }, # #\F10
+            { "k;", key_special("F10") }, # #\F10
+            { "F1", key_special("F11") }, # #\F11
+            { "F2", key_special("F12") }, # #\F12
+          };
+          var uintL i;
+          for (i=0; i < sizeof(funkey_tab)/sizeof(funkey); i++) {
+            begin_system_call();
+            cap = tgetstr(funkey_tab[i].capname,&tp);
+            end_system_call();
+            if (cap)
+              add_keybinding(cap,&funkey_tab[i].key);
+          }
+        }
         # Special Linux console handling:
         begin_system_call();
         cap = tgetstr("kh",&tp); # Home
-        if (!(CHECK_CAP('[','1','~') && (cap[4] == '\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == '[') && (cap[2] == '1') && (cap[3] == '~') && (cap[4] == '\0')))
           goto not_linux;
         cap = tgetstr("kI",&tp); # Insert
-        if (!(CHECK_CAP('[','2','~') && (cap[4] == '\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == '[') && (cap[2] == '2') && (cap[3] == '~') && (cap[4] == '\0')))
           goto not_linux;
         cap = tgetstr("kD",&tp); # Delete
-        if (!(CHECK_CAP('[','3','~') && (cap[4] == '\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == '[') && (cap[2] == '3') && (cap[3] == '~') && (cap[4] == '\0')))
           goto not_linux;
         end_system_call();
         keybinding(ESCstring"[4~", key_special("END")); # #\End
@@ -8433,16 +8476,16 @@ local object make_keyboard_stream (void) {
         # Special xterm handling:
         begin_system_call();
         cap = tgetstr("ku",&tp);
-        if (!(CHECK_CAP('O','A','\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'A') && (cap[3] == '\0')))
           goto not_xterm;
         cap = tgetstr("kd",&tp);
-        if (!(CHECK_CAP('O','B','\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'B') && (cap[3] == '\0')))
           goto not_xterm;
         cap = tgetstr("kr",&tp);
-        if (!(CHECK_CAP('O','C','\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'C') && (cap[3] == '\0')))
           goto not_xterm;
         cap = tgetstr("kl",&tp);
-        if (!(CHECK_CAP('O','D','\0')))
+        if (!(cap && (cap[0] == ESC) && (cap[1] == 'O') && (cap[2] == 'D') && (cap[3] == '\0')))
           goto not_xterm;
         end_system_call();
         # Insert, Delete:
